testsuite/tests/ghc-regress/rename/should_fail/rnfail032.hs
-- !!! check that hiding works with qualified imports
module ShouldFail ( List.map ) where
import qualified List hiding ( map )
